Repurposed nav-element widths (using flexbox) + fixed sidebar alignment for widescreens

--- a/2011/_css/60em.css
+++ b/2011/_css/60em.css
@@ -64,13 +64,19 @@
 	.no-touch.js #parallax-layer-5 { z-index: 50; background-position: 135px -200px; height: 390px;top: 110px;}
 */
 	
-	nav ul { margin-top: -1px; }
 	#header nav .expanded { display: inline; }
 	.tickets { font-size: 14px; }
 	.tickets a dt { width: 50%; margin-bottom: 1.5em; }
 	.tickets a dd { width: 50%; margin-bottom: 1.5em; }
 	
-	#content { position: static; }
+	#content { max-width: 87em; }
+	#content .container {
+		width: 39em;
+		position: relative;
+		margin-left: auto;
+		margin-right:auto;
+		left: -7.5em;
+	}
 	.strip { margin: 4em auto; }
 	.strip h2 {
 		font-size: 36px;
@@ -78,8 +84,11 @@
 	}
 	
 	.sidebar {
-		top: 58em;
+		top: 15em;
+		right: 0;
 		border-left: 1px solid rgba(200,200,200,0.3);
+		border-right: 1px solid #666;
+		border-right: 1px solid rgba(200,200,200,0.3);
 	}
 	.sidebar .widget + .widget { margin-top: 3em; }
 	
